src/style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");

:root {
  font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  --gap: 24px;
  --radius: 15px;
  --shadow: 5px 5px rgba(0, 0, 0, 0.27);

  --light-color: rgba(255, 255, 255, 0.748);
  --main-color: rgb(6, 31, 70);
  --dark-gray: rgb(34, 34, 34);
  --theme-color: rgb(34, 34, 34);
  --highlight-color: rgb(106, 46, 150);

  box-sizing: border-box;
}

html,
body {
  height: 100%;
  /* width: 100vw; */
  padding: 0;
  margin: 0;

  display: flex;
  flex-direction: column;

  box-sizing: border-box;
}

/* Usual background, change the URL */
html {
  /* background: url(./images/bread-bg.jpg) no-repeat center center fixed; */
  /* background-size: cover; */
  background-color: var(--theme-color);
}

#content {
  z-index: 1;
}

/* Usual header */
header {
  padding: 20px;
  padding-left: 118px;
  padding-right: 118px;
  background-color: #00000095;
  font-weight: bold;
  font-size: 1.5rem;

  display: flex;
  align-items: center;
  justify-content: space-between;

  /* box-shadow: var(--shadow); */
  color: white;
  z-index: 1;
}

.search-icon {
  cursor: pointer;
}

.search-bar-div {
  display: flex;
}

.search-bar {
  min-width: 300px;
  font-size: 0.9rem;
  font-weight: normal;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;

  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border-radius: 20px;
  border: none;
  padding: 10px;
  padding-left: 40px;

  position: relative;
  -webkit-appearance: none;
}

.search-icon {
  position: relative;
  top: 8px;
  left: 32px;
  z-index: 1;
}

/* Usual footer */
footer {
  font-size: 10px;
  text-align: center;
  background-color: #0606069d;
  color: white;
  padding-left: var(--gap);
  padding-right: var(--gap);
  padding-top: 12px;
  padding-bottom: 12px;
}

main {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.main-box {
  height: 85%;
  width: 85%;
  /* background-color: rgba(0, 0, 0, 0.392); */
  color: white;
  border-radius: 30px;
  border: none;

  display: flex;
  justify-content: center;
  align-items: center;
}

.round-flag-icon {
  height: 40px;
  width: 40px;
}

.main-grid {
  height: 100%;
  width: 100%;
  display: grid;

  grid-template-columns: repeat(8, 1fr);
  grid-template-rows: repeat(4, 1fr);
  gap: 10px;
}

.top-box,
.in-grid {
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border-radius: 20px;
  border: none;
  padding: 10px;
  text-align: center;
}

.in-grid {
  display: flex;
  justify-content: center;
  align-items: center;
}

.city-info {
  grid-column-start: 1;
  grid-column-end: 6;
  grid-row-start: 1;
  grid-row-end: 3;

  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
  padding: 30px;
  gap: 20px;
}

.city-info-left {
  flex: 1;
  display: flex;
  flex-direction: column;
  /* align-items: center; */
  justify-content: center;
  gap: 10px;
}

.city {
  display: flex;
  gap: 20px;
  align-items: center;
  justify-content: space-between;
  /* flex: 1; */
  margin-bottom: 15px;
}

.city-name {
  font-size: 1.2rem;
  font-weight: bold;
}

.current-weather-container {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(6, 1fr);
  gap: 6px;
}

.current-weather {
  /* display: flex;
  justify-content: center;
  align-items: center; */
  font-size: 0.8rem;
}

.current-weather-icon {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 5;
}

.big-icon {
  height: 80px;
  width: 80px;
}

.current-weather-main {
  font-weight: bold;
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 5;
  grid-row-end: 6;
}

.current-weather-description {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 6;
  grid-row-end: 7;
}

.current-temp {
  grid-column-start: 2;
  grid-column-end: 5;
  grid-row-start: 1;
  grid-row-end: 4;

  display: flex;
  align-items: center;
  font-size: 0.8rem;
  justify-content: flex-start;
  gap: 10px;
  padding-left: 20px;
  padding-right: 20px;
}

.current-feels-like {
  grid-column-start: 2;
  grid-column-end: 5;
  grid-row-start: 4;
  grid-row-end: 7;

  display: flex;
  align-items: center;
  font-size: 0.8rem;
  justify-content: flex-start;
  gap: 10px;
  padding-left: 20px;
  padding-right: 20px;
}

.small-icon {
  height: 30px;
}

.date-info {
  grid-column-start: 6;
  grid-column-end: 9;
  grid-row-start: 1;
  grid-row-end: 2;

  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

.date-today,
.timezone {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 5px;
  font-size: 0.9rem;
}

.time-now {
  font-size: 1.5rem;
  font-weight: bold;
}

.timezone-1 {
  font-size: 1.2rem;
}

.sun-info {
  grid-column-start: 6;
  grid-column-end: 9;
  grid-row-start: 2;
  grid-row-end: 3;

  /* gap: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column; */
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr;
  gap: 10px;
  padding: 0;
  font-size: 0.9rem;
}

.weather-data {
  font-size: 0.7rem;
  grid-row-start: 3;
  grid-row-end: 5;

  flex-direction: column;
  /* justify-content: flex-start; */
  /* gap: 10px; */
}

p {
  margin: 0;
}

.no-bg {
  background-color: unset;
}

.icon {
  height: 50px;
}

.sunset,
.sunrise {
  justify-content: space-around;
}

.sun-heading {
  font-weight: bold;
  margin-bottom: 10px;
}

#map {
  height: 100%;
  width: 285px;
  /* flex: 1; */
  border-radius: 20px;
  opacity: 50%;
  border: none;
}

